@@ -33,6 +33,7 @@ struct nsd_options;
  * PASS_TO_XFRD is followed by the u16(len in network order) and 
  * then network packet contents.  packet is a notify(acl checked), or 
  * xfr reply from a master(acl checked).
+ * followed by u32(acl number that matched from notify/xfr acl).
  */
 #define NSD_PASS_TO_XFRD 7
 
